Prevent page from jumping around when form errors detected

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -133,6 +133,10 @@
 }
 
 @layer utility {
+  .show-empty-element:after {
+    content: "\00A0"; /* non-breaking space */
+  }
+
   .flex-center {
     justify-content: center;
     align-items: center;
